req for xml done

--- a/HTML/supportPage.html
+++ b/HTML/supportPage.html
@@ -23,7 +23,7 @@
     
     
     <div>
-        <input type="text" id="supportArea" placeholder="Área de Conhecimento">
+        <input type="text" id="knowledgeArea" placeholder="Área de Conhecimento">
     </div>
     <div>
         <input type="text" id="regionServes" placeholder="Região que Atende">
