--- a/HTML/verificationPage.html
+++ b/HTML/verificationPage.html
@@ -23,13 +23,13 @@
      
     
     <div>
-        <input type="text" id="supportArea" placeholder="Área de Trabalho">
+        <input type="text" id="workArea" placeholder="Área de Trabalho">
     </div>
     <div>
-        <input type="text" id="regionServes" placeholder="Checklists Encarregadas">
+        <input type="text" id="listsCharge" placeholder="Checklists Encarregadas">
     </div>
     <div>
-        <input type="text" id="languages" placeholder="Nível de Atuação">
+        <input type="text" id="performanceLevel" placeholder="Nível de Atuação">
     </div>
 </form>
 
