--- a/index.html
+++ b/index.html
@@ -20,33 +20,42 @@
         <div id="secArea">
             <div id="secAreaTitle">Tela de Cadastro Inicial</div>
             <div id="secAreaSpaces">
-                <div id="secAreaSpace">
+                <a href="HTML/verificationPage.html" id="secAreaSpace" key="0">
                     <div id="spaceArea-title">Cadastrar no Departamento de Verificação</div>
                     <div>
                         <img src="assets/img/AdobeStock_330228564WHITE.png" alt="">
                     </div>
-                </div>
-                <div id="secAreaSpace">
+                </a>
+                <a href="HTML/tiPage.html" id="secAreaSpace" key="1">
                     <div id="spaceArea-title">Cadastrar no Departamento de Tecnologia da Informação</div>
                     <div>
                         <img src="assets/img/AdobeStock_437555277WHITE.png" alt="">
                     </div>
-                </div>
-                <div id="secAreaSpace">
+                </a>
+                <a href="HTML/supportPage.html" id="secAreaSpace" key="2">
                     <div id="spaceArea-title">Cadastrar no Departamento de Suporte</div>
                     <div>
                         <img src="assets/img/AdobeStock_412644208WHITE.png" alt="">
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
-    <section>
+    <section id="secForm">
+        <div> M88568</div>
         <div id="formHtmlArea">
-            
+            <!-- novo HTML será carregado aqui -->
+        </div>
+        <div id="confirmForm">
+            <a href="" id="submitForm">CADASTRAR</a>
+            <a href="" id="cancelForm">CANCELAR</a>
         </div>
     </section>
 
 
+
+
+    <script src="assets/js/formXMLHTTPR.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
