--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </section>
     <section id="secForm">
-        <div> M88568</div>
+        <div> </div>
         <div id="formHtmlArea">
             <!-- novo HTML será carregado aqui -->
         </div>
