--- a/HTML/verificationPage.html
+++ b/HTML/verificationPage.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../assets/style/supportStyle.css">
 
-<form action="" method="get">
+<form action="" method="get" id="formRegistration">
     <div>
         <input type="text" id="name" placeholder="Nome">
     </div>
