--- a/HTML/verificationPage.html
+++ b/HTML/verificationPage.html
@@ -14,7 +14,7 @@
         <input type="text" id="cpf" placeholder="CPF">
     </div>
     <div>
-        <input type="text" id="countryOrigin" placeholder="Naturalidade">
+        <input type="text" id="countryOrigin" placeholder="País">
     </div>
     <div>
         <input type="text" id="profissionalArea" placeholder="Formação">
