writing screen inputs

--- a/index.html
+++ b/index.html
@@ -51,11 +51,19 @@
             <a href="" id="cancelForm">CANCELAR</a>
         </div>
     </section>
+    <section></section>
+    <section id="employeesArea">
+        <span id="titleEmployeesArea">FUNCIONÁRIOS CADASTRADOS</span>
+        <div id="regEmployeesArea">
+            
+        </div>
+    </section>
 
 
 
 
     <script src="assets/js/formXMLHTTPR.js"></script>
-    <script src="assets/js/index.js"></script>
+    <script type="module" src="assets/js/index.js"></script>
+    <!-- <script src="assets/js/employees.js"></script> -->
 </body>
 </html>
